# agent09

./: .gitignore  CLAUDE.md  README.md  TODOS.md  debug.html  index.html  package.json  pnpm-lock.yaml  popup.html  vite.config.ts  vitest.config.ts
docs/: DEMO0_ACCEPTANCE.md  QUICKSTART.md
docs/superpowers/plans/: 2026-05-31-demo-0-retrieval-validation.md
docs/superpowers/specs/: 2026-05-31-personal-knowledge-assistant-design.md
examples/demo-transcripts/: eval.json
examples/demo-vault/areas/: chinese-asr.md  coffee-roasting.md  error-catalog.md  hotword-management.md  privacy-retention.md  retrieval-evaluation.md
scripts/: create-demo-fixtures.mjs
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/api/: commands.test.ts  commands.ts
src/asr/: iflytek-auth.test.ts  iflytek-auth.ts  iflytek.test.ts  iflytek.ts  types.ts
src/core/: cjk.test.ts  cjk.ts  config.test.ts  config.ts  errors.ts  hotwords.test.ts  hotwords.ts  ids.test.ts  ids.ts  indexer.test.ts  indexer.ts  markdown.test.ts  markdown.ts  retrieval.test.ts  retrieval.ts  scanner.test.ts  scanner.ts  schema.sql  search.test.ts  search.ts  types.ts  uri.test.ts  uri.ts
src/eval/: runEval.test.ts  runEval.ts
src/popup/: PopupApp.tsx  RecordingIndicator.tsx  ResultCards.test.tsx  ResultCards.tsx  popup-state.test.ts  popup-state.ts  popup.css
src/service/: localCommands.test.ts  localCommands.ts  server.test.ts  server.ts
src/settings/: SettingsApp.test.tsx  SettingsApp.tsx  main.tsx  settings.css
src/test/: tmp.ts
(+14 files in other folders)
