[package]
name = "knowledge-assistant-demo0"
version = "0.0.0"
description = "Knowledge Assistant Demo 0"
authors = ["Knowledge Assistant"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
open = "5.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
